--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
+		"@chakra-ui/react": "^2.5.5",
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"framer-motion": "^10.10.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
