--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.4",
-    "@storybook/addon-interactions": "^7.0.4",
-    "@storybook/addon-links": "^7.0.4",
-    "@storybook/blocks": "^7.0.4",
-    "@storybook/builder-vite": "^7.0.4",
-    "@storybook/react": "^7.0.4",
-    "@storybook/react-vite": "^7.0.4",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/addon-essentials": "^7.0.5",
+    "@storybook/addon-interactions": "^7.0.5",
+    "@storybook/addon-links": "^7.0.5",
+    "@storybook/addon-mdx-gfm": "^7.0.5",
+    "@storybook/blocks": "^7.0.5",
+    "@storybook/react": "^7.0.5",
+    "@storybook/react-vite": "^7.0.5",
+    "@storybook/testing-library": "^0.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -40,7 +40,7 @@
     "@vitest/coverage-c8": "^0.29.8",
     "happy-dom": "^8.9.0",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.4",
+    "storybook": "^7.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vitest": "^0.29.8"
