infra: adjust docker build

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
-version: '3'
-
+version: '3.4'
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    restart: always
+    react-nginx-app:
+      stdin_open: true
+      build:
+        context: .
+        dockerfile: Dockerfile
+      ports:
+        - 8081:3000
+      restart: always
