--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,10 @@ server {
 
   location / {
     root /usr/share/nginx/html/;
-    include /etc/nginx/mime.types;
+    include mime.types;
+    types {
+        application/javascript js mjs;
+    }
     try_files $uri $uri/ /index.html;
   }
 }
