--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"happy-dom": "^8.9.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0",
-		"vitest": "^0.29.8",
-		"vitest-sonar-reporter": "^0.4.0"
+		"vitest": "^0.31.0"
 	}
 }
